@@ -5,6 +5,7 @@ DISTRO=FC6
 PYTHON_VER=2.4
 AUDITCONF=\\/etc\\/audit\\/audit.rules
 MODULAR=y
-#
+CUSTOMIZABLE_TYPES=y
+
 
 
