@@ -5,6 +5,4 @@ DISTRO=FC5
 PYTHON_VER=2.4
 AUDITCONF=\\/etc\\/audit\\/audit.rules
 MODULAR=y
-#
-
-
+CUSTOMIZABLE_TYPES=y
