@@ -5,6 +5,5 @@ DISTRO=FC6
 PYTHON_VER=2.4
 AUDITCONF=\\/etc\\/audit\\/audit.rules
 MODULAR=y
-#
-
+CUSTOMIZABLE_TYPES=y
 
