@@ -8,6 +8,10 @@ CFLAGS ?= -Werror -Wall -W
 override CFLAGS += -I$(prefix)/include -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -I../include -I/usr/include/selinux -D$(DISTRO)
 LDLIBS += -lselinux  -L$(prefix)/lib
 LIBSEEDIT = ../lib/libseedit.a
+ifeq ($(CUSTOMIZABLE_TYPES),n)
+	override CFLAGS += -D NO_CUSTOMIZABLE_TYPES
+endif
+
 
 all: seedit-restorecon
 
