@@ -2,6 +2,7 @@
 - Modified to eliminate warnings generated by rpmlint
 changed install place, everything under /etc/seedit is now installed at /usr/share/seedit
 - XML support is not included
+- fixed bug in allownet(invalid syntax for nodecon)
 
 *2006/10/21 Yuichi Nakamura
 Included Makefiles in config/makefiles
